--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,8 @@ padding-left: 30px;
 .game-info{
     margin-left: 20px;
 }
+
+.reverseOrder {
+    display: flex;
+    flex-direction: column-reverse;
+}
