Updates to use Material, with theme, and only show history if a move has been made

--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,8 @@
-body{
-    font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
-}
-
-ol, ul{
-padding-left: 30px;
-}
 
 .board-row::after{
     clear: both;
     content: "";
     display: table;
-}
-
-.status{
-    margin-bottom: 10px;
 }
 
 .square, .boldsquare {
@@ -32,9 +20,7 @@ padding-left: 30px;
 }
 
 .boldsquare {
-    font-weight: bolder;
-    color: #333;
-    background-color: yellow;
+    background: yellow;
 }
 
 .square:focus{
@@ -43,15 +29,6 @@ padding-left: 30px;
 
 .kbd-navigation .square:focus{
     background: #ddd;
-}
-
-.game {
-    display: flex;
-    flex-direction: row;
-}
-
-.game-info{
-    margin-left: 20px;
 }
 
 .reverseOrder {
